--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,35 @@
+title: My blog
+description: My very nice blog
+author: "Carlos Franzreb"
+
 theme: minima
+
+base_url: /
+repository: carlosfranzreb/carlosfranzreb.github.io
+
+# Minima social links
+github_username: carlosfranzreb
+rss: rss
+
+# Minima: show excerpts in the frontpage
+show_excerpts: true
+
+minima:
+  date_format: "%Y-%m-%d"
+
+# Minima: custom header links
+header_pages:
+  - _pages/frontpage.md
+  - _pages/about.md
+  - _pages/archive.md
+
+include:
+  - _pages
+
+exclude:
+  - .gitignore
+  - docker-compose.yml
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
