--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,7 @@ minima:
 
 # Minima: custom header links
 header_pages: []
-#   - _pages/frontpage.md
-#   - _pages/archive.md
+  - _pages/frontpage.md
 
 include:
   - _pages
