--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minima:
   date_format: "%Y-%m-%d"
 
 # Minima: custom header links
-header_pages: []
+header_pages:
   - _pages/frontpage.md
 
 include:
