--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ base_url: /
 repository: carlosfranzreb/carlosfranzreb.github.io
 
 # Minima social links
+email: carlos.franzreb@dfki.de
 github_username: carlosfranzreb
 rss: rss
 
