--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ permalink: /:title
 # Minima social links
 email: carlos.franzreb@dfki.de
 github_username: carlosfranzreb
-linkedin_username: carlos-franzreb-77865037a
+linkedin_username: carlos-franzreb #-77865037a
 rss: rss
 
 # Minima: show excerpts in the frontpage
